--- a/css/core.css
+++ b/css/core.css
@@ -22,6 +22,17 @@ body {
 	
 	color: rgb(51, 51, 51);
 }
+h1 {
+	margin-top: 0;
+	margin-bottom: 16px;
+	padding: 0;
+	font-size: 38px;
+	font-weight: 300;
+	line-height: 100%;
+	color: rgb(0, 132, 190);
+	letter-spacing: -1px;
+	display: block;
+}
 h2 {
 	margin-top: 0;
 	margin-bottom: 16px;
